fix(popover-beta): hiding now done with display not visibility
hiding now done with display not visibility

COMUI-1502

--- a/src/components/beta/gux-popover-beta/gux-popover-beta.less
+++ b/src/components/beta/gux-popover-beta/gux-popover-beta.less
@@ -14,13 +14,12 @@
   display: inline-block;
   padding: @gux-spacing-medium;
   color: @gux-black-50;
-  visibility: visible !important;
   background-color: @gux-grey-100;
   border-radius: @spacing-2xs;
   .gux-shadow-40();
 
   &.gux-hidden {
-    visibility: hidden !important;
+    display: none;
   }
 
   .gux-arrow {
